[change] Finalized production docker image